# bevy_vach_assets

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: CONTRIBUTING.md
.github/workflows/: audit.yaml  ci.yaml
bevy_vach_assets/: Cargo.toml
bevy_vach_assets/src/: lib.rs
bva_cli/: Cargo.toml
bva_cli/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
