[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/asaaki/bevy_vach_assets"
repository = "https://github.com/asaaki/bevy_vach_assets"
categories = [
    "game-development",
    "encoding",
    "compression",
    "cryptography",
]
keywords = [
    "bevy",
    "assets",
    "archive",
    "vach",
    "game",
]
readme = "README.md"

[workspace]
resolver = "2"

members = [
    "bevy_vach_assets",
    "bva_cli",
]
exclude = ["examples/*"]
