[package]
name = "bevy_vach_assets"
description = "Bevy Vach Assets is a plugin for Bevy Engine that allows you to load assets from Vach archives"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

include = ["src/*", "Cargo.toml", "../README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["bevy_asset"] }
futures-lite = { version = "2.5.0", default-features = false, features = ["std"] }
vach = { version = "0.6.2", features = ["compression", "crypto"] }
