[package]
name = "bva_cli"
description = "Bevy Vach Assets CLI"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

include = ["src/*", "Cargo.toml", "../README.md"]

[[bin]]
name = "bva"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bevy_vach_assets = { version = "0.1.2", path = "../bevy_vach_assets" }
clap = { version = "4.4.12", features = ["derive", "env", "wrap_help"] }
path-slash = "0.2.1"
walkdir = "2.4.0"
